scssと動画を更新

--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Pagesを作成</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>GitHub Pagesを作成</h1>
+    <header>
+        <div class="header-inner">
+        <h1>GitHub Pagesを作成</h1>
+<nav class="g-nav">
+<ul>
+<li><a href="#">会社概要<span>Company</span></a></li>
+<li><a href="#">事業内容<span>Srvice</span></a></li>
+<li><a href="#">採用情報<span>Recruit</span></a></li>
+<li><a href="#">お問い合わせ<span>Contact</span></a></li>
+</ul>
+</nav>
+</div>
+    </header>
+    <div class="video-wrapper">
+    <video src="img/Cat - 32037.mp4" autoplay muted loop></video>
+    </div>
+    <div class="content">
+        <h2>外にゃんこ毛繕い</h2>
+        <p>つれづれなるまゝに、日暮らし、硯にむかひて、心にうつりゆくよしなし事を、そこはかとなく書きつくれば、あやしうこそものぐるほしけれ。（Wikipediaより）つれづれなるまゝに、日暮らし、硯にむかひて、心にうつりゆくよしなし事を、そこはかとなく書きつくれば、あやしうこそものぐるほしけれ。（Wikipediaより）つれづれなるまゝに、日暮らし、硯にむかひて、心にうつりゆくよしなし事を、そこはかとなく書きつくれば、あやしうこそものぐるほしけれ。（Wikipediaより）つれづれなるまゝに、日暮らし、硯にむかひて、心にうつりゆくよしなし事を、そこはかとなく書きつくれば、あやしうこそものぐるほしけれ。（Wikipediaより）つれづれなるまゝに、日暮らし、硯にむかひて、心にうつりゆくよしなし事を、そこはかとなく書きつくれば、あやしうこそものぐるほしけれ。（Wikipediaより）つれづれなるまゝに、</p>
+    </div><!-- content -->
 </body>
 </html>
